--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,10 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+clap = { version = "4.5.47", features = [ "derive" ] }
+serde = { version = "1.0.219", features = [ "derive" ] }
+tokio = { version = "1.47.1", features = [ "macros", "rt-multi-thread", "time" ] }
+midir = "0.10.2"
+serde_json = "1.0.143"
+thiserror = "2.0.16"
+wmidi = "4.0.10"
